Updated core.js to prevent race condition while attaching block controller to the block element. Moved some namespacing within the thie.view function to make declaring the view easier. Added cursor pointer when hovering over a block

--- a/core/css/styles.less
+++ b/core/css/styles.less
@@ -24,5 +24,9 @@ html, body {
         margin: 3px auto;
         min-height: 60px;
         padding: 10px;
+
+        &:hover {
+            cursor: pointer;
+        }
     }
 }
